<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.haoranzhao.jilizhang.AllRecords"
    android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/NoRecordTxt"
            android:layout_gravity="center"
            android:text="@string/no_record_yet">
        </TextView>

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.94"
            android:id="@+id/MyListView">
        </ListView>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dip"
        android:background="#C0CFE8"
        android:orientation="vertical"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginBottom="10dip">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:gravity="center_vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_a_person"
                android:textSize="20sp"
                />
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:id="@+id/SpinnerByperson"
                android:spinnerMode="dialog"
                >

            </Spinner>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:gravity="center_vertical"
            >
            <TextView
                android:id="@+id/who_owe_you"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/e_g_Name_owe_you_amount"
                android:textSize="20sp"
                />

        </LinearLayout>
    </LinearLayout>


    </LinearLayout>
